--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p .",
+    "start": "node dist/index",
+    "dev": "tsc-watch --onSuccess \"node dist/index\""
   },
   "keywords": [
     "redis"
@@ -15,6 +17,7 @@
   "devDependencies": {
     "@types/node": "^24.7.2",
     "ts-node": "^10.9.2",
+    "tsc-watch": "^7.2.0",
     "typescript": "^5.9.3"
   },
   "dependencies": {
